# github-secrets

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml  clippy.toml  cobertura.xml  config.example.toml  error_output.txt  rustfmt.toml
.github/workflows/: ci.yml  release.yml
src/: app.rs  app_deps.rs  cli.rs  config.rs  constants.rs  error.rs  errors.rs  github.rs  lib.rs  main.rs  paths.rs  prompt.rs  rate_limit.rs  validation.rs
tests/: app_run_with_deps_tests.rs  app_startup_tests.rs  app_test.rs  config_command_test.rs  config_test.rs  edge_cases_test.rs  error_test.rs  errors_tests.rs  github_api_test.rs  github_api_wiremock_tests.rs  integration_test.rs  paths_test.rs  paths_xdg_default_test.rs  prompt_date_test.rs  prompt_interaction_test.rs  prompt_interactive_tests.rs  prompt_unit_tests.rs  selection_test.rs  tui_test.rs  validation_edge_cases_test.rs  xdg_tests.rs
