[package]
name = "update-secrets"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
crypto_box = { version = "0.9", features = ["chacha20", "std"] }
rand_core = "0.6"
rand = "0.8"
crossterm = "0.27"
dialoguer = "0.11"
chrono = "0.4"
octocrab = "0.48"
colored = "2.1"



