[package]
name = "github-secrets"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
sodoken = "0.1"
rand = "0.8"
crossterm = "0.27"
ratatui = "0.27"
chrono = "0.4"
octocrab = "0.48"
colored = "2.1"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"

