[package]
name = "github-secrets"
version = "0.1.0"
edition = "2024"
authors = ["Sudhanshu Ranjan <perfectsudh@gmail.com>"]
description = "A CLI tool to update GitHub repository secrets interactively"
license = "MIT"
repository = "https://github.com/sudokoi/github-secrets"
keywords = ["github", "secrets", "cli", "automation"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
toml = "0.8"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
sodoken = "0.1"
rand = "0.8"
crossterm = "0.27"
ratatui = "0.27"
chrono = "0.4"
octocrab = "0.48"
colored = "2.1"
dirs = "5.0"
regex = "1.10"

[dev-dependencies]
serial_test = "0.5"
tempfile = "3.10"
wiremock = "0.6"
tokio-test = "0.4"
